# TRViS_Realtime_Editor

./: .editorconfig  .gitignore  .npmrc  .pnpmfile.cjs  .prettierignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  clippy.toml  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  rustfmt.toml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.e2e.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  dotnet-harness.yml  release.yml  tauri-build.yml
crates/trvis-ws-server/: Cargo.toml
crates/trvis-ws-server-bin/: Cargo.toml
crates/trvis-ws-server-bin/src/: main.rs
crates/trvis-ws-server/src/: lib.rs  messages.rs  server.rs  state.rs
docker/: Cargo.docker.toml  Dockerfile.app  Dockerfile.harness  docker-compose.yml
e2e-tests/src/: fixture.ts  helpers.ts  timetable.test.ts
e2e-ui/: editor.spec.ts  fixtures.ts  websocket-wire.spec.ts  websocket.spec.ts
scripts/: generate-third-party-licenses.mjs  render-app-icon.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  monitor.json
src-tauri/src/: lib.rs  main.rs
src/api/: wsServer.test.ts  wsServer.ts
src/components/: AppInfoDialog.tsx  ConnectionInfoDialog.tsx  ConnectionPanel.tsx  Dialog.tsx  EditorLayout.tsx  LocationMapDialog.tsx  MapPanel.tsx  RemoteCommandsPanel.tsx  RemoteSelectionBar.tsx  SyncedDataPanel.tsx  ThirdPartyLicensesDialog.tsx  TimetableTable.tsx  Toolbar.tsx
src/components/Forms/: TimetableRowForm.tsx  TrainForm.tsx  WorkForm.tsx  WorkGroupForm.tsx
src/components/Monitor/: MonitorComposer.tsx  MonitorDock.tsx  MonitorFrameRow.tsx  MonitorPanel.tsx  MonitorWindowApp.tsx
src/components/Tree/: WorkGroupTree.tsx
src/components/__tests__/: ConnectionPanel.test.tsx  SyncedDataPanel.test.tsx  Toolbar.test.tsx  WorkGroupTree.test.tsx
src/jsonEditor/: JsonEditDialog.test.tsx  JsonEditDialog.tsx  JsonEditor.tsx  parseDocument.test.ts  parseDocument.ts  schema.ts
src/store/: editorStore.singleton.test.ts  editorStore.test.ts  editorStore.ts  monitorStore.test.ts  monitorStore.ts  remoteInfoResponse.test.ts  remoteInfoResponse.ts  trainSearch.test.ts  trainSearch.ts  useAutoBroadcast.ts  useMonitorFeed.ts  useRemoteRequestResponder.ts
src/styles/: global.css
src/test/: setup.ts  zustand-vanilla-patched.ts
src/types/: trvis.ts  trvisEnums.ts
test-harness/TRViSTestHarness/: ApiHelper.cs  Program.cs  TRViSTestHarness.csproj  TimetableCache.cs  WsClientRunner.cs
(+5 files in other folders)
