[workspace]
resolver = "2"
members = ["crates/trvis-ws-server", "crates/trvis-ws-server-bin", "src-tauri"]

[workspace.package]
edition = "2021"
authors = ["TR"]
license = "MIT"
repository = "https://github.com/TetsuOtter/TRViS_Realtime_Editor"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
trvis-ws-server = { path = "crates/trvis-ws-server" }
axum = "0.8"
