[package]
name = "trvis-ws-server-bin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "trvis-ws-server"
path = "src/main.rs"

[dependencies]
trvis-ws-server.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
